--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -84,14 +84,20 @@ $$
 
 i.e. $C$ is a copula of $F$.
 
+As an application of Sklar's theorem, copula enables one to decompose the joint PDF $h$ into the product of the marginal densities and the copula density, denoted as $c$:
+
+$$h(x_{1}, \dots , x_{n}) = c(F_{1}(x_{1}), \dots , F_{n}(x_{n})) \prod\limits_{i = 1}^{n} f_{i}(x_{i}),$$
+
+where $f_{i}$ for $i = 1, \dots , n$ are the marginal PDFs of the joint CDF $H$. When the variables are dependent, the copula density will differ from unity (in the case of independent random variables) and can be thought of as *reweighting* the product of the marginal densities to produce a joint density for dependent random variables[^4]. The copula is sometimes called the **dependence function**{: style="color: red"}, as it completely describes the dependence between two random variables: Any measure of dependence that is scale invariant (i.e., is not affected by strictly increasing transformations of the underlying variables) can be expressed as a function of the copula alone. Such dependence measures include **Kendall's $\tau$**{: style="color: red"}, **Spearman's $\rho$**{: style="color: red"}, and tail dependence coefficients. For more details, please refer to Drouet Mari and Kotz (2001)[^5]. Pearson's linear correlation coefficient cannot be expressed in terms of the copula alone; it also depends on the marginal distributions. Sklar's theorem can also be extended to apply to conditional distributions, which is useful for forecasting and time series applications[^6]. The complication that arises when applying Sklar's theorem to conditional distributions is that the information set used for the margins and the copula must be the same; if different information sets are used, then the resulting function $H_{t}$ can no longer be interpreted as a multivariate conditional distribution.
+
 ### Some common bivariate copulas
 
 -    **Product copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2}) = u_{1}u_{2}$, where $u_{1}$ and $u_{2}$ take values in the unit interval of the real line.
 -    **Farlie-Gumbel-Morgenstern (FGM) copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = u_{1}u_{2}[1 + \theta(1 - u_{1})(1 - u_{2})]$[^4].
+     $C(u_{1}, u_{2} ; \theta) = u_{1}u_{2}[1 + \theta(1 - u_{1})(1 - u_{2})]$[^7].
 -    **Gaussian (normal) copula**{: style="color: red"}<br />
-     $C(u_{1}, u_{2} ; \theta) = \int_{-\infty}^{\Phi^{-1}(u_{1})} \int_{-\infty}^{\Phi^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta^{2})^{1/2}} \cdot \frac{-(s^{2} - 2\theta s t + t^{2})}{2(1 - \theta^{2})}\,\mathrm{d}s\,\mathrm{d}t$, where $\Phi$ is the cdf of the standard normal distribution. In [Lee (1983)](https://www.jstor.org/stable/1912003?seq=1)[^5], Gaussian copula was proposed to tackle the censored regression model:
+     $C(u_{1}, u_{2} ; \theta) = \int_{-\infty}^{\Phi^{-1}(u_{1})} \int_{-\infty}^{\Phi^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta^{2})^{1/2}} \cdot \frac{-(s^{2} - 2\theta s t + t^{2})}{2(1 - \theta^{2})}\,\mathrm{d}s\,\mathrm{d}t$, where $\Phi$ is the CDF of the standard normal distribution. In [Lee (1983)](https://www.jstor.org/stable/1912003?seq=1)[^8], Gaussian copula was proposed to tackle the censored regression model:
   
      $$
      \begin{align} 
@@ -100,10 +106,24 @@ i.e. $C$ is a copula of $F$.
      \end{align}
      $$
 
-     in which $u$ and $\epsilon$ conditional on $x$ and $z$ have absolutely continuous distribution functions, but the joint bivariate distribution of $u$ and $\epsilon$ is not specified.
--    **Student's t-copula**{: style="color: red"}<br />
+     in which $u$ and $\epsilon$ conditional on $x$ and $z$ have absolutely continuous distribution functions, but the joint bivariate distribution of $u$ and $\epsilon$ is not specified. The $n$-dimensional normal or Gaussian copula is derived from the $n$-dimensional Gaussian distribution. Let $\Phi$ denote the scalar standard normal CDF, and $\Phi_{\Sigma, n}$ the $n$-dimensional normal distribution with correlation matrix $\Sigma$. Then, the $n$-dimensional normal copula with correlation matrix $\Sigma$ is
+
+     $$C(\mathbf{u}; \Sigma) = \Phi_{\Sigma, n}(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n})),$$
+
+     whose copula PDF is
+
+     $$c(\mathbf{u}; \Gamma) = \frac{1}{\sqrt{|\Gamma|}} e^{-\frac{(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n}))'(\Gamma^{-1} - I_{n})(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n}))}{2}}.$$
+-    **Student's $t$-copula**{: style="color: red"}<br />
      ${\scriptstyle C^{t}(u_{1}, u_{2} ; \theta_{1}, \theta_{2}) = \int_{-\infty}^{t_{\theta_{1}}^{-1}(u_{1})} \int_{-\infty}^{t_{\theta_{2}}^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta_{2}^{2})^{1/2}} \cdot \biggl( 1 + \frac{s^{2} - 2\theta_{2} s t + t^{2}}{\nu(1 - \theta_{2}^{2})} \biggr)^{-(\theta_{1} + 2)/2}\,\mathrm{d}s\,\mathrm{d}t}$,<br />
-     where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the cdf of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ / $\rho$ denotes degrees of freedom / correlation of the bivariate $t$-distribution.
+     where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the CDF of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ / $\rho$ denotes degrees of freedom / correlation of the bivariate $t$-distribution. The $n$-dimensional Student's $t$-copula is derived from the $n$-dimensional Student's $t$-distriution. Let $T_{\nu}$ be the scalar standard Student's $t$-distribution with $\nu > 2$ degrees of freedom and $T_{\Sigma, \nu}$ be the $n$-dimensional Student's $t$-distribution with $\nu > 2$ degrees of freedom and a shape matrix $\Sigma$. Then the $n$-dimensional Student's $t$-copula with correlation matrix $\Sigma$ is
+
+     $$C(\mathbf{u}; \Sigma, \nu) = T_{\Sigma, \nu}(T_{\nu}^{-1}(u_{1}), \dots , T_{\nu}^{-1}(u_{n})).$$
+
+     The Student's $t$-copula density is
+
+     $$c(\mathbf{u}; \Sigma, \nu) = \frac{\Gamma(\frac{\nu + n}{2})[\Gamma(\frac{\nu}{2})]^{n-1}}{\sqrt{|\Sigma|}[\Gamma(\frac{\nu + 1}{2})]^{n}} (1 + \frac{\mathbf{x}'\Sigma^{-1}\mathbf{x}}{\nu})^{-\frac{\nu + d}{2}} \prod\limits_{i = 1}^{n}(1 + \frac{x_{i}^{2}}{\nu})^{\frac{\nu + 1}{2}},$$
+
+     where $\mathbf{x} = (x_{1}, \dots , x_{n})'$ with $x_{i} = T_{\nu}^{-1}(u_{i})$.
 -    **Clayton copula**{: style="color: red"}<br />
      $C(u_{1}, u_{2} ; \theta) = (u_{1}^{-\theta} + u_{2}^{-\theta} - 1)^{-1/\theta}$ with the dependence parameter $\theta$ restricted on the region $(0, \infty)$.
 -    **Frank copula**{: style="color: red"}<br />
@@ -133,7 +153,7 @@ Archimedean copulas are **symmetric** in the sense that $C(u_{1}, u_{2}) = C(u_{
 
 $$c(u_{1}, u_{2}) = \frac{\varphi''(C(u_{1}, u_{2}))\varphi'(u_{1})\varphi'(u_{2})}{[\varphi'(C(u_{1}, u_{2}))]^{3}},$$
 
-where the derivatives do not exist on the boundary $\varphi(u_{1}) + \varphi(u_{2}) = \varphi(0)$[^6]. The conditional density of the Archimedean copula is
+where the derivatives do not exist on the boundary $\varphi(u_{1}) + \varphi(u_{2}) = \varphi(0)$[^9]. The conditional density of the Archimedean copula is
 
 $$\frac{\partial}{\partial u_{2}}C(u_{1}, u_{2}) = \frac{\varphi'(u_{2})}{\varphi'(C(u_{1}, u_{2}))}.$$
 
@@ -155,7 +175,7 @@ $$\varphi(z) = \int_{z}^{1} f(u)\,\mathrm{d}u.$$
 
 Making use of this theorem, we can verify that FGM family is not Archimedean.
 
-**Proposition 1.**[^7] Let $(U, V)$ be a random vector from an Archimedean copula, with generator $\varphi$. Set $W = \frac{\varphi(U)}{\varphi(U) + \varphi(V)}$ and $Z = C(U, V)$. Then
+**Proposition 1.**[^10] Let $(U, V)$ be a random vector from an Archimedean copula, with generator $\varphi$. Set $W = \frac{\varphi(U)}{\varphi(U) + \varphi(V)}$ and $Z = C(U, V)$. Then
 
 1. W is distributed uniformly on $(0, 1)$;
 
@@ -193,7 +213,7 @@ $$G(z, w) = \int_{0}^{z}\int_{0}^{w} \frac{-\varphi'(u)\varphi'(v)\varphi''(z)}{
 
 ### The Frechet bounds for a copula
 
-Given an arbitrary $n$-variate joint cdf $F(y_{1}, \dots , y_{n})$ with univariate marginal cdfs $F_{1}, \dots , F_{n}$, the joint cdf is bounded below and above by the **Frechet-Hoeffding lower and upper bounds**{: style="color: red"}, $F_{L}$ and $F_{U}$, defined as
+Given an arbitrary $n$-variate joint CDF $F(y_{1}, \dots , y_{n})$ with univariate marginal CDFs $F_{1}, \dots , F_{n}$, the joint CDF is bounded below and above by the **Frechet-Hoeffding lower and upper bounds**{: style="color: red"}, $F_{L}$ and $F_{U}$, defined as
 
 $$
 \begin{align}
@@ -206,7 +226,7 @@ which satisfy
 
 $$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq F(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}.$$
 
-The upper bound is always a cdf while the lower bound is a cdf for $n = 2$.
+The upper bound is always a CDF while the lower bound is a CDF for $n = 2$.
 
 This definition also applies to copulas:
 
@@ -225,12 +245,18 @@ The Frechet-Hoeffding lower bound of a bivariate copula is Archimedean. Specific
 
 [^3]: Pravin K. Trivedi and David M. Zimmer, *Copula Modeling: An Introduction for Practitioners* Foundations and Trends in Econometrics, Vol. 1, No. 1 (2005) pp. 1-111.
 
-[^4]: James E. Prieger, A Flexible Parametric Selection Model for Non-Normal Data with Application to Health Care Usage, *Journal of Applied Econometrics*, Vol. 17, No. 4 (2002), pp. 367-392. In this article, FGM copula is chosen for sample selection in that "the marginal distributions in he FGM system may be of any form, as long as their cdfs are absolutely continuous."
+[^4]: Yanqin Fan and Andrew J. Patton, Copulas in Econometrics, *Annu. Rev. Econ.* 2014. 6:179-200.
 
-[^5]: Lung-Fei Lee, Generalized Econometric Models with Selectivity, *Econometrica*, Vol. 51, No. 2 (1983), pp. 507-512.
+[^5]: Dominique Drouet Mari and Samuel Kotz, *Correlation and Dependence*, Imperial College Press, 2001.
 
-[^6]: Christian Genest and Jock MacKay, The Joy of Copulas: Bivariate Distributions with Uniform Marginals, *The American Statistician*, Vol. 40, No. 4 (1986), pp. 280-283.
+[^6]: Andrew J. Patton, Modelling Asymmetric Exchange Rate Dependence, *International Economic Review*, Vol. 47, No. 2 (2006), pp. 527-556.
 
-[^7]: Christian Genest and Louis-Paul Rivest, Statistical Inference Procedures for Bivariate Archimedean Copulas, *Journal of the American Statistical Association*, Vol. 88, No. 423 (1993), pp. 1034-1043.
+[^7]: James E. Prieger, A Flexible Parametric Selection Model for Non-Normal Data with Application to Health Care Usage, *Journal of Applied Econometrics*, Vol. 17, No. 4 (2002), pp. 367-392. In this article, FGM copula is chosen for sample selection in that "the marginal distributions in he FGM system may be of any form, as long as their cdfs are absolutely continuous."
 
-[^8]: Mohamed N. Jouini and Robert T. Clemen, Copula Models for Aggregating Expert Opinions, *Operations Research*, Vol. 44, No. 3 (1996), pp. 444-457.
+[^8]: Lung-Fei Lee, Generalized Econometric Models with Selectivity, *Econometrica*, Vol. 51, No. 2 (1983), pp. 507-512.
+
+[^9]: Christian Genest and Jock MacKay, The Joy of Copulas: Bivariate Distributions with Uniform Marginals, *The American Statistician*, Vol. 40, No. 4 (1986), pp. 280-283.
+
+[^10]: Christian Genest and Louis-Paul Rivest, Statistical Inference Procedures for Bivariate Archimedean Copulas, *Journal of the American Statistical Association*, Vol. 88, No. 423 (1993), pp. 1034-1043.
+
+[^11]: Mohamed N. Jouini and Robert T. Clemen, Copula Models for Aggregating Expert Opinions, *Operations Research*, Vol. 44, No. 3 (1996), pp. 444-457.
