--- a/_posts/2022-05-01-copulas.md
+++ b/_posts/2022-05-01-copulas.md
@@ -45,6 +45,8 @@ $$F_{i}(y_{i}) = \mathbb{P}\{Y_{i} \leq y_{i}\}, \quad 1 \leq i \leq n$$
 
 as the marginal function. If all the marginal functions are continuous, then the copula function is unique.
 
+## Sklar's Theorem
+
 Sklar's basic result is now the following:
 
 **Theorem 1.** If $H$ is an $n$-dimensional probability distribution function with one-dimensional margins $F_{1}, \dots , F_{n}$, then there exists an $n$-dimensional copula $C$ such that, for all $x_{1}, \dots , x_{n} \in \mathbb{R}$, $$H(x_{1}, \dots , x_{n}) = C(F_{1}(x_{1}), \dots , F_{n}(x_{n})).$$
@@ -88,7 +90,9 @@ As an application of Sklar's theorem, copula enables one to decompose the joint 
 
 $$h(x_{1}, \dots , x_{n}) = c(F_{1}(x_{1}), \dots , F_{n}(x_{n})) \prod\limits_{i = 1}^{n} f_{i}(x_{i}),$$
 
-where $f_{i}$ for $i = 1, \dots , n$ are the marginal PDFs of the joint CDF $H$. When the variables are dependent, the copula density will differ from unity (in the case of independent random variables) and can be thought of as *reweighting* the product of the marginal densities to produce a joint density for dependent random variables[^4]. The copula is sometimes called the **dependence function**{: style="color: red"}, as it completely describes the dependence between two random variables: Any measure of dependence that is scale invariant (i.e., is not affected by strictly increasing transformations of the underlying variables) can be expressed as a function of the copula alone. Such dependence measures include **Kendall's $\tau$**{: style="color: red"}, **Spearman's $\rho$**{: style="color: red"}, and tail dependence coefficients. For more details, please refer to Drouet Mari and Kotz (2001)[^5]. Pearson's linear correlation coefficient cannot be expressed in terms of the copula alone; it also depends on the marginal distributions. Sklar's theorem can also be extended to apply to conditional distributions, which is useful for forecasting and time series applications[^6]. The complication that arises when applying Sklar's theorem to conditional distributions is that the information set used for the margins and the copula must be the same; if different information sets are used, then the resulting function $H_{t}$ can no longer be interpreted as a multivariate conditional distribution.
+where $f_{i}$ for $i = 1, \dots , n$ are the marginal PDFs of the joint CDF $H$. When the variables are dependent, the copula density will differ from unity (in the case of independent random variables) and can be thought of as *reweighting* the product of the marginal densities to produce a joint density for dependent random variables[^4]. The copula is sometimes called the **dependence function**{: style="color: red"}, as it completely describes the dependence between two random variables: Any measure of dependence that is scale invariant (i.e., is not affected by strictly increasing transformations of the underlying variables) can be expressed as a function of the copula alone. Such dependence measures include **Kendall's $\tau$**{: style="color: red"}, **Spearman's $\rho$**{: style="color: red"}, and tail dependence coefficients. For more details, please refer to Mari and Kotz (2001)[^5]. Pearson's linear correlation coefficient cannot be expressed in terms of the copula alone; it also depends on the marginal distributions. Sklar's theorem can also be extended to apply to conditional distributions, which is useful for forecasting and time series applications[^6]. The complication that arises when applying Sklar's theorem to conditional distributions is that the information set used for the margins and the copula must be the same; if different information sets are used, then the resulting function $H_{t}$ can no longer be interpreted as a multivariate conditional distribution.
+
+## Copula Examples
 
 ### Some common bivariate copulas
 
@@ -112,7 +116,7 @@ where $f_{i}$ for $i = 1, \dots , n$ are the marginal PDFs of the joint CDF $H$.
 
      whose copula PDF is
 
-     $$c(\mathbf{u}; \Gamma) = \frac{1}{\sqrt{|\Gamma|}} e^{-\frac{(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n}))'(\Gamma^{-1} - I_{n})(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n}))}{2}}.$$
+     $$c(\mathbf{u}; \Sigma) = \frac{1}{\sqrt{|\Sigma|}} e^{-\frac{(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n}))'(\Sigma^{-1} - I_{n})(\Phi^{-1}(u_{1}), \dots , \Phi^{-1}(u_{n}))}{2}}.$$
 -    **Student's $t$-copula**{: style="color: red"}<br />
      ${\scriptstyle C^{t}(u_{1}, u_{2} ; \theta_{1}, \theta_{2}) = \int_{-\infty}^{t_{\theta_{1}}^{-1}(u_{1})} \int_{-\infty}^{t_{\theta_{2}}^{-1}(u_{2})} \frac{1}{2\pi(1 - \theta_{2}^{2})^{1/2}} \cdot \biggl( 1 + \frac{s^{2} - 2\theta_{2} s t + t^{2}}{\nu(1 - \theta_{2}^{2})} \biggr)^{-(\theta_{1} + 2)/2}\,\mathrm{d}s\,\mathrm{d}t}$,<br />
      where $t_{\theta_{1}}^{-1}(u_{1})$ denotes the inverse of the CDF of the standard univariate $t$-distribution with $\theta_{1}$ degrees of freedom ($\theta_{1}$ controls the heaviness of the tails), and $\nu$ / $\rho$ denotes degrees of freedom / correlation of the bivariate $t$-distribution. The $n$-dimensional Student's $t$-copula is derived from the $n$-dimensional Student's $t$-distriution. Let $T_{\nu}$ be the scalar standard Student's $t$-distribution with $\nu > 2$ degrees of freedom and $T_{\Sigma, \nu}$ be the $n$-dimensional Student's $t$-distribution with $\nu > 2$ degrees of freedom and a shape matrix $\Sigma$. Then the $n$-dimensional Student's $t$-copula with correlation matrix $\Sigma$ is
@@ -121,7 +125,7 @@ where $f_{i}$ for $i = 1, \dots , n$ are the marginal PDFs of the joint CDF $H$.
 
      The Student's $t$-copula density is
 
-     $$c(\mathbf{u}; \Sigma, \nu) = \frac{\Gamma(\frac{\nu + n}{2})[\Gamma(\frac{\nu}{2})]^{n-1}}{\sqrt{|\Sigma|}[\Gamma(\frac{\nu + 1}{2})]^{n}} (1 + \frac{\mathbf{x}'\Sigma^{-1}\mathbf{x}}{\nu})^{-\frac{\nu + d}{2}} \prod\limits_{i = 1}^{n}(1 + \frac{x_{i}^{2}}{\nu})^{\frac{\nu + 1}{2}},$$
+     $$c(\mathbf{u}; \Sigma, \nu) = \frac{\Gamma(\frac{\nu + n}{2})[\Gamma(\frac{\nu}{2})]^{n-1}}{\sqrt{|\Sigma|}[\Gamma(\frac{\nu + 1}{2})]^{n}} (1 + \frac{\mathbf{x}'\Sigma^{-1}\mathbf{x}}{\nu})^{-\frac{\nu + n}{2}} \prod\limits_{i = 1}^{n}(1 + \frac{x_{i}^{2}}{\nu})^{\frac{\nu + 1}{2}},$$
 
      where $\mathbf{x} = (x_{1}, \dots , x_{n})'$ with $x_{i} = T_{\nu}^{-1}(u_{i})$.
 -    **Clayton copula**{: style="color: red"}<br />
@@ -211,7 +215,7 @@ $$G(z, w) = \int_{0}^{z}\int_{0}^{w} \frac{-\varphi'(u)\varphi'(v)\varphi''(z)}{
 *Table 1: Examples of Families of Archimedean Copulas*
 {:.table-caption}
 
-### The Frechet bounds for a copula
+## The Frechet-Hoeffding Inequality and Correlation Bounds for a Copula
 
 Given an arbitrary $n$-variate joint CDF $F(y_{1}, \dots , y_{n})$ with univariate marginal CDFs $F_{1}, \dots , F_{n}$, the joint CDF is bounded below and above by the **Frechet-Hoeffding lower and upper bounds**{: style="color: red"}, $F_{L}$ and $F_{U}$, defined as
 
@@ -228,14 +232,21 @@ $$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq F(y_{1}, \dots , y_{n
 
 The upper bound is always a CDF while the lower bound is a CDF for $n = 2$.
 
-This definition also applies to copulas:
+The Frechet-Hoeffding inequality also applies to copulas:
 
 $$\max \{ \sum\limits_{j = 1}^{n} F_{j} - n + 1, 0 \} \leq C(y_{1}, \dots , y_{n}) \leq \min \{ F_{1}, \dots , F_{n} \}$$
 
 The Frechet-Hoeffding lower bound of a bivariate copula is Archimedean. Specifically $C_{L}(u, v)$ is generated by $\varphi(z) = 1 - z, 0 \leq z \leq 1$. Knowledge of Frechet-Hoeffding bounds is important in selecting an appropriate copula. The desirable feature of a copula is that it should cover the sample space between the lower and the upper bounds and that as $\theta$ approaches the lower (upper) bound of its permissible range, the copula approaches the Frechet-Hoeffding lower (upper) bound.
 
-## Construction of a Copula
+Oftentimes, on may be interested in parameters that are functionals of the bivariate CDF $H$ with marginal CDFs $F_{1}$ and $F_{2}$, such as the correlation coefficient of $X_{1}$ and $X_{2}$. Suppose $X_{1}$ and $X_{2}$ have finite means $\mu_{1}$ and $\mu_{2}$, finite variances $\sigma_{1}^{2}$ and $\sigma_{2}^{2}$, and correlation coefficient $\rho$. The covariance of $X_{1}$ and $X_{2}$ has an alternative expression:
 
+$$cov(X_{1}, X_{2}) = \int \int [H(x_{1}, x_{2}) - F_{1}(x_{1})F_{2}(x_{2})]\,\mathrm{d}x_{1}\,\mathrm{d}x_{2}.$$
+
+Suppose the marginal distributions are fixed. Then applying the Frechet-Hoeffding inequality imples sharp bounds on the $cov(X_{1}, X_{2})$: $\rho_{L} \leq \rho \leq \rho_{U}$, where
+
+$$\rho_{L} = \frac{\int \int [F_{L} - F_{1}(x_{1})F_{2}(x_{2}]\,\mathrm{d}x_{1}\,\mathrm{d}x_{2}}{\sigma_{1}\sigma_{2}},$$
+
+$$\rho_{U} = \frac{\int \int [F_{U} - F_{1}(x_{1})F_{2}(x_{2}]\,\mathrm{d}x_{1}\,\mathrm{d}x_{2}}{\sigma_{1}\sigma_{2}}.$$
 
 ## References
 
